helmchart/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: '/api'
    route:
    - destination:
         host: student-app-api.default.svc.cluster.local
         port:
           number: 8080
  - route:
    - destination:
         host: student-app-client.default.svc.cluster.local
         port:
           number: 80
